# whisper_cpp

./: .credo.exs  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  checksum-Elixir.WhisperCpp.Native.exs  mix.exs  shell.nix  usage-rules.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  integration.yml  release.yml  security.yml
config/: config.exs
lib/: whisper_cpp.ex
lib/whisper_cpp/: abort_handle.ex  error.ex  model.ex  native.ex  pcm.ex  segment.ex  transcription.ex  wav.ex  word.ex
native/whisper_cpp_native/: Cargo.toml  rustfmt.toml
native/whisper_cpp_native/src/: errors.rs  lib.rs  native_log.rs  transcribe.rs  vad.rs  wav.rs
src/: whisper_params.rs  whisper_vad.rs
sys/: Cargo.toml
test/: integration_test.exs  whisper_cpp_test.exs
test/support/: fixtures.ex
test/whisper_cpp/: error_test.exs  nif_contract_test.exs  pcm_test.exs  structs_test.exs  wav_test.exs
