[package]
name = "whisper_cpp_native"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[lib]
name = "whisper_cpp_native"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.38.0"
# `whisper-rs` is the canonical Rust binding to whisper.cpp. It vendors
# whisper.cpp under `sys/whisper.cpp/` and exposes cargo features that
# toggle the upstream CMake build flags.
whisper-rs = { version = "0.16.0", default-features = false }
parking_lot = "0.12.5"
anyhow = "1.0.102"

[features]
# Pick exactly one acceleration backend per build via WHISPER_CPP_FEATURES.
# CPU is always available (bare `mix compile`); GPU backends are mutually
# exclusive at runtime.
default = []
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
vulkan = ["whisper-rs/vulkan"]
metal = ["whisper-rs/metal"]
coreml = ["whisper-rs/coreml"]
intel-sycl = ["whisper-rs/intel-sycl"]
openblas = ["whisper-rs/openblas"]
openmp = ["whisper-rs/openmp"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Upstream whisper-rs 0.16.0 (latest release) has two open callback bugs
# (codeberg.org/tazz4843/whisper-rs issues 277/271, fix PR 278) and
# vendors whisper.cpp 1.8.3. The `vendor/whisper-rs-0.16.0-patched`
# branch of this repo carries the published 0.16.0 with the callback
# fixes and the whisper.cpp submodule at v1.8.6. Drop both patches once
# a whisper-rs release lands the fixes and re-vendors (issue #26).
[patch.crates-io]
whisper-rs = { git = "https://github.com/rubas/whisper_cpp.git", rev = "1e948f1b1a41617044ba2b1213dfe50bfeac73a2" }
whisper-rs-sys = { git = "https://github.com/rubas/whisper_cpp.git", rev = "1e948f1b1a41617044ba2b1213dfe50bfeac73a2" }
